--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
     font-family: Verdana;
+    background-color: rgb(43, 42, 51);
 }
 
 label {
     font-size: 20px;
-    /* margin: 20px; */
     margin-left: 20px;
+    color:rgb(255, 255, 255)
 }
 
 button {
@@ -21,4 +22,9 @@ button {
 
 button:hover {
     background-color: rgb(131, 226, 152);
+}
+
+#barChart {
+    width: 100%;
+    max-width: 900px
 }
