--- a/style.css
+++ b/style.css
@@ -36,9 +36,15 @@ button:hover {
 }
 
 table {
-    margin-left: 25px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 th, td {
-    padding: 10px;
+    padding: 16px;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
 }
