--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@ body {
     background-color: rgb(43, 42, 51);
 }
 
+.marginTop {
+    margin-top: 15px;
+}
+
 label {
-    font-size: 20px;
+    font-size: 19px;
     margin-left: 25px;
     margin-right: 5px;
     color: white;
@@ -13,6 +17,15 @@ label {
 #everyContribution {
     margin-left: 10px;
     margin-right: 10px;
+}
+
+input {
+    font-size: 14px;
+}
+
+select {
+    font-size: 14px;
+    padding: 5px;
 }
 
 button {
@@ -42,6 +55,7 @@ button:hover {
 
 table {
     margin-top: 50px;
+    margin-bottom: 70px;
     margin-left: auto;
     margin-right: auto;
     border-collapse: separate;
