--- a/style.css
+++ b/style.css
@@ -79,21 +79,28 @@ button:hover {
     height: 100%;
     max-width: 900px;
     max-height: 900px;
-    margin-top: 15px;
     margin-left: auto;
     margin-right: auto;
 }
 
 /* log of the data (table) */
 table {
-    margin-top: 50px;
-    margin-bottom: 70px;
     margin-left: auto;
     margin-right: auto;
     border-collapse: separate;
     border: 2px solid gray;
     border-radius: 8px;
 
+}
+
+#tableOfTotals {
+    margin-top: 40px;
+    margin-bottom: 15px;
+}
+
+#tableOfData {
+    margin-top: 50px;
+    margin-bottom: 70px;
 }
 
 th, td {
