--- a/style.css
+++ b/style.css
@@ -11,25 +11,28 @@ header
 
 form
 {
+    margin-top: 15px;
+    max-width: 600px;
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
     text-align: left;
+    background-color: rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
 }
 
 /* all 3 divs in the header */
 
 .labels {
-    float: left;
     color: white;
-    font-size: 19px;
     text-align: right;
     line-height: 28px;
 }
 
 .inputs {
-    margin: 0 auto;
-    display: inline-block;
     font-size: 17px;
     padding-left: 15px;
     padding-right: 15px;
@@ -37,13 +40,12 @@ form
 }
 
 .everyContributionDiv {
-    float: right;
-    padding-top: 8px;
+    padding-top: 13px;
     color: white;
 }
 
 .labels, .inputs, .everyContributionDiv {
-    margin-top: 15px;
+    margin: 15px 0;
 }
 
 input {
@@ -55,7 +57,6 @@ input {
 select {
     font-size: 14px;
     margin-left: 5px;
-    margin-right: 35px;
     padding: 1px;
 }
 
