--- a/style.css
+++ b/style.css
@@ -3,74 +3,6 @@ body {
     background-color: rgb(43, 42, 51);
 }
 
-@media screen and (max-width:750px){
-    body {
-        font-size: 14px;
-    }
-
-    input {
-        max-width: 120px;
-        max-height: 16px;
-    }
-    
-    select {
-        max-width: 100px;
-        font-size: 14px;
-    } 
-}
-
-@media screen and (max-width:650px){
-    body {
-        font-size: 12px;
-    }
-
-    input {
-        max-width: 100px;
-        max-height: 15px;
-    }
-
-    select {
-        font-size: 12px;
-        max-width: 80px;
-    } 
-}
-
-@media screen and (max-width:550px){
-    body {
-        font-size: 10px;
-    }
-
-    input {
-        max-width: 90px;
-        max-height: 14px;
-    }
-
-    select {
-        font-size: 10px;
-        max-width: 60px;
-    } 
-}
-
-@media screen and (max-width:500px){
-    body {
-        font-size: 8px;
-    }
-
-    input {
-        max-width: 90px;
-        max-height: 12px;
-    }
-
-    .labels {
-        line-height: 20px;
-    }
-
-    select {
-        font-size: 10px;
-        max-width: 60px;
-    } 
-}
-
 header {
     display: block;
     text-align: center;
@@ -96,7 +28,7 @@ form {
 .labels {
     color: white;
     text-align: right;
-    line-height: 28px;
+    line-height: 29.6px;
 }
 
 .inputs {
@@ -151,15 +83,19 @@ button:hover {
     height: 0;
 }
 
+#totalsDiv {
+    margin: 0 2%;
+}
+
 #tableOfTotals {
     margin-bottom: 15px;
     position: relative;
 }
 
-#barChart {
-    width: 100%;
-    height: 100%;
-    max-width: 1200px;
+#barChartDiv {
+    width: 80%;
+    height: auto;
+    max-width: 1100px;
     max-height: 1200px;
     margin: 0 auto;
     position: relative;
@@ -180,6 +116,10 @@ table {
     border: 2px solid gray;
     border-radius: 8px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+}
+
+#tableDiv {
+    margin: 0 2%;
 }
 
 #tableOfData {
