--- a/style.css
+++ b/style.css
@@ -224,6 +224,28 @@ td:first-child, th:first-child {
      border-left: none;
 }
 
+#footer {
+    width: 100%;
+    height: 80vh;
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.footer-max-height {
+    max-height: 100px;
+    margin: 50px 0;
+}
+
+h5 {
+    color: white;
+    text-decoration: underline;
+    font-size: 1.1rem;
+    text-align: center;
+    margin: 50px auto;
+}
+
 /* intro page animation*/
 .introAnimation {
     animation-name: topToPosition;
