--- a/style.css
+++ b/style.css
@@ -43,28 +43,52 @@ html {
 }
 
 @media only screen and (max-width: 500px) {
-    html {
-        font-size: 11px;
-    }
     input {
         max-height: 1rem;
+        max-width: 70px;
+        padding: 0;
+        margin: 0;
+    }
+    select {
+        font-size: .6rem;
+        margin-left: 0.2rem;
+        padding: 0.03rem;
+        max-width: 45px;
+    }
+    .everyContributionDiv {
+        margin: 0;
+        padding: 0;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    input {
+        max-height: .83rem;
+        max-width: 55px;
+    }
+}
+
+@media only screen and (max-width: 430px) {
+    input {
+        max-width: 40px;
     }
 }
 
 @media only screen and (max-width: 400px) {
-    html {
-        font-size: 10px;
-    }
     input {
-        max-height: .83rem;
-        max-width: 7rem;
+        max-width: 30px;
+    }
+    select {
+        font-size: .6rem;
+        margin-left: 0px;
+        padding: 0.02rem;
+        max-width: 20px;
     }
 }
 
+
+
 @media only screen and (max-width: 300px) {
-    html {
-        font-size: 9px;
-    }
     input {
         max-height: .83rem;
     }
